<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="17"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".details.MealDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:id="@+id/meal_img"
                android:src="@drawable/default_meal"
                android:scaleType="fitXY"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/meal_name"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="Meal Name"
                android:gravity="center"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/category_name"
                    android:textColor="@color/primary"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"/>
<ImageView
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:scaleType="fitXY"
    android:id="@+id/category_img"
    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/meal_category"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/primary"
                    android:textSize="20sp"
                    android:text="Beef"
                    android:gravity="center"
                   />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Country"
                    android:textColor="@color/primary"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-black"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/country_img"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/meal_area"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/primary"
                    android:textSize="20sp"

                    android:text="Beef"
                    android:gravity="center"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/meal_description"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/primary"
                android:layout_marginBottom="16dp"/>

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/youtube_player_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enableAutomaticInitialization="false"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/ingredients"
                android:gravity="center"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredinets_recycler_view"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/steps"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                android:id="@+id/steps_tv"
                android:gravity="center"
                android:layout_marginBottom="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/steps_recycler_view"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_to_favorite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:src="@drawable/favorite"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:contentDescription="@string/favourte"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/add_to_plan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/add_to_plan"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:contentDescription="@string/add_to_plan" />
    </LinearLayout>

</LinearLayout>
